# ranch

./: .gitignore  A2A_STANDALONE_PLAN.md  AGENT.md  CHANGELOG.md  COMPLETION_SUMMARY.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  MULTI_AGENT_ANALYSIS.md  PROTOCOL_COMPLIANCE_FIXES.md  README.md  RELEASE_SUMMARY_v0.6.0.md  RELEASE_SUMMARY_v0.7.0.md  UML_DIAGRAMS.md  UNSCHEDULED.md  config.example.toml  draft.md
.features/a2a-protocol-update/: implementation-plan.md  requirements.md
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
a2a-protocol/: AGENT.md  CHANGELOG.md  Cargo.toml  DOCS_INDEX.md  FEATURES.md  FEATURE_FLAGS.md  GETTING_STARTED.md  IMPLEMENTATION_ROADMAP.md  MIGRATION_v0.4.md  MIGRATION_v0.5.md  README.md  REFACTORING_2024.md  TODO_v0.5.0.md  TODO_v0.6.0.md  TODO_v0.7.0.md  UNIMPLEMENTED_FEATURES.md  WEBHOOKS.md  a2a.json  package-lock.json
a2a-protocol/docs/: WEBHOOKS.md
a2a-protocol/examples/: README.md  basic_echo_server.rs  complete_agent.rs  echo_client.rs  multi_agent.rs  push_notification_client.rs  server.rs  simple_server.rs  streaming_client.rs  streaming_server.rs  streaming_type_safety.rs  task_server.rs  webhook_server.rs
a2a-protocol/progress/: COMPLETED_v0.6.0.md  IMPLEMENTATION_ROADMAP.md  MIGRATION_v0.6.0.md  README.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.7.0.md  RELEASE_SUMMARY_v0.7.0.md  TODO_v0.7.0.md  TODO_v0.8.0.md
a2a-protocol/src/: lib.rs
a2a-protocol/src/auth/: authenticator.rs  mod.rs  strategies.rs
a2a-protocol/src/client/: builder.rs  client.rs  mod.rs  streaming_client.rs
a2a-protocol/src/client/auth/: mod.rs  strategies.rs
a2a-protocol/src/client/transport/: http_client.rs  mod.rs  sse.rs  traits.rs
a2a-protocol/src/client/transport/json_rpc/: mod.rs  transport.rs
a2a-protocol/src/core/: agent_card.rs  agent_id.rs  error.rs  extension.rs  json_rpc.rs  message.rs  message_id.rs  mod.rs  push_notification.rs  requests.rs  sse.rs  ssrf_protection.rs  streaming_events.rs  task.rs
a2a-protocol/src/extensions/: client_routing.rs  mod.rs
a2a-protocol/src/server/: agent_logic.rs  agent_profile.rs  builder.rs  handler.rs  mod.rs  push_notification_store.rs  router.rs  sse.rs  task_aware_handler.rs  task_store.rs  transport_capabilities.rs  webhook_delivery.rs
a2a-protocol/src/server/json_rpc/: axum.rs  dispatcher.rs  mod.rs
a2a-protocol/src/streaming/: client.rs  mod.rs  server.rs
a2a-protocol/src/transport/: http.rs  json_rpc.rs  mod.rs  sse.rs  traits.rs
a2a-protocol/src/transport/json_rpc/: mod.rs  transport.rs  types.rs
a2a-protocol/tests/: client_streaming.rs  compliance.rs  push_notification_rpc.rs  rpc_integration.rs
multi-agent/: AGENT.md  Cargo.toml  README.md  config.example.toml  config.toml
multi-agent/docs/: ARCHITECTURE.md  UML_DIAGRAMS.md
multi-agent/examples/: README.md  README_FANTASY_STORY.md  agent_servers.rs  fantasy_story_config.toml  fantasy_story_writer.rs  remote_agents.rs  simple_fantasy_writer.rs  simple_team.rs  supervisor_team.rs  team_client.rs  team_server.rs  workflow_team.rs
multi-agent/src/: adapters.rs  agent.rs  config.rs  lib.rs  main.rs  manager.rs  remote_agent.rs  server.rs  team.rs
multi-agent/src/agent/: a2a_agent.rs  errors.rs  mod.rs  openai_agent.rs  traits.rs
multi-agent/src/protocols/: a2a.rs
multi-agent/src/team/: mod.rs  router.rs  types.rs
multi-agent/tests/: integration.rs  router_integration.rs  server.rs
multi-agent/tests/common/: mod.rs
scripts/: analyze-coverage-json.py  analyze-coverage.py  compliance-test.sh  run-all-tests.sh
specs/001-complete-a2a-integration/: FEATURE_COMPLETE.md  IMPLEMENTATION_PLAN.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-complete-a2a-integration/checklists/: requirements.md
specs/001-complete-a2a-integration/contracts/: config-conversions.md  team-agent-trait.md  team-server-api.md
specs/002-ractor-actor-orchestration/: DEPRECATED.md  spec.md
specs/002-ractor-actor-orchestration/checklists/: requirements.md
specs/003-team-router-refactor/: FEATURE_COMPLETE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-team-router-refactor/checklists/: requirements.md
src/: config.rs  lib.rs  protocol.rs
src/protocols/: mod.rs  openai.rs
