[workspace]
members = [
    "multi-agent",
    "a2a-protocol",
]
resolver = "2"

[workspace.package]
version = "0.8.0"
edition = "2024"
authors = ["Darren Zhao <cyberelfd@gmail.com>"]
license = "MIT"
repository = "https://github.com/cyberelf/ranch"

[workspace.dependencies]
# Common dependencies that can be shared across crates
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "2.0"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }