[package]
name = "a2a-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A Rust implementation of the A2A (Agent-to-Agent) protocol"
readme = "README.md"
keywords = ["a2a", "agent", "protocol", "ai", "communication"]
categories = ["network-programming", "api-bindings"]

[dependencies]
# Workspace dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
axum = { version = "0.7", optional = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Additional dependencies for A2A protocol
url = "2.4"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
jsonschema = "0.17"
semver = "1.0"
hyper = { version = "0.14", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = { version = "0.3", optional = true }
async-stream = { version = "0.3", optional = true }
bytes = { version = "1.0", optional = true }

[dev-dependencies]
tracing-subscriber.workspace = true
mockall = "0.11"
assert-json-diff = "2.0"

[features]
default = ["http-client", "json-rpc", "streaming"]
http-client = []
json-rpc = ["axum"]
grpc = []
websocket = []
# Optional streaming support (SSE-based, per JSON-RPC extension)
streaming = ["json-rpc", "futures-util", "async-stream", "bytes"]
full = ["http-client", "json-rpc", "grpc", "websocket", "streaming"]