[package]
name = "a2a-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A Rust implementation of the A2A (Agent-to-Agent) protocol"
readme = "README.md"
keywords = ["a2a", "agent", "protocol", "ai", "communication"]
categories = ["network-programming", "api-bindings"]

[dependencies]
# Core dependencies (always included)
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "2.0.17"
url = "2.4"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
jsonschema = "0.33.0"
semver = "1.0"

# Shared dependencies (used by both client and server)
reqwest = { version = "0.12.24", features = ["json", "stream"], optional = true }

# Server-only dependencies
axum = { version = "0.8.6", optional = true }
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6.6", features = ["cors"], optional = true }
hyper = { version = "1.7.0", features = ["full"], optional = true }

# Streaming dependencies (used by both client and server when enabled)
futures-util = { version = "0.3", optional = true }
async-stream = { version = "0.3", optional = true }
bytes = { version = "1.0", optional = true }

# Currently unused
tokio-tungstenite = { version = "0.28.0", optional = true }

[dev-dependencies]
tracing-subscriber.workspace = true
mockall = "0.13.1"
assert-json-diff = "2.0"

[features]
default = ["client", "server", "streaming"]

# Core feature sets
client = ["reqwest"]
server = ["reqwest", "axum", "tower", "tower-http", "hyper"]

# Streaming support (requires client for StreamingResult and transport types)
streaming = ["client", "futures-util", "async-stream", "bytes"]

# Legacy feature names (for backward compatibility)
http-client = ["client"]
json-rpc = ["server"]

# Protocol variants (future use)
grpc = []
websocket = ["tokio-tungstenite"]

# Full featured build
full = ["client", "server", "streaming", "websocket"]