[package]
name = "multi-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# A2A Protocol with client and server features
a2a-protocol = { path = "../a2a-protocol", features = ["client", "server"] }

# URL handling
url = "2.4"

# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Configuration
config = "0.13"
toml = "0.8"

# Server framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Note: reqwest is now internal to a2a-protocol